--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Checklist</title>
-    <style>
+       <style>
+        /* Load Proxima Nova from GitHub */
+        @font-face {
+            font-family: "Proxima Nova";
+            src: url("https://github.com/kwillisVA/docebo-checklist/raw/refs/heads/main/fonts/ProximaNova-Regular-01.woff2") format("woff2"),
+            font-weight: normal;
+            font-style: normal;
+        }
+
         /* General Styles */
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Proxima Nova", sans-serif;
             margin: 0;
             padding: 0;
             overflow: hidden;
