--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
        <style>
 @font-face {
     font-family: "Proxima Nova";
-    src: url("https://github.com/kwillisVA/docebo-checklist/raw/refs/heads/main/fonts/ProximaNova-Regular-01.woff2") format("woff2"),
-         url("https://github.com/kwillisVA/docebo-checklist/raw/refs/heads/main/fonts/ProximaNova-Regular-01.woff") format("woff");
+    src: url("https://kwillisva.github.io/docebo-checklist/fonts/ProximaNova-Regular-01.woff2") format("woff2"), url("https://kwillisva.github.io/docebo-checklist/fonts/ProximaNova-Regular-01.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
