--- a/index.html
+++ b/index.html
@@ -53,16 +53,20 @@ body {
         }
 
         .slide {
-            min-width: 100%;
-            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            text-align: center;
+            text-align: center; /* Ensure text aligns properly */
             padding: 30px;
+            width: 100%;
         }
-
+/* Ensure all headings and text are fully centered */
+        h1, h2, p, ul {
+            text-align: center;
+            margin: 0 auto; /* Ensures consistent centering */
+            max-width: 80%; /* Keeps it from being too wide */
+        }
         /* Headings & Text */
         h2 {
             font-size: clamp(24px, 6vw, 36px);
