--- a/index.html
+++ b/index.html
@@ -45,42 +45,47 @@ body {
             border-radius: 10px;
         }
 
-        .slides {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
+        /* Fix slide container width */
+.slides {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center; /* Center slides horizontally */
+    align-items: center; /* Center slides vertically */
+    transition: transform 0.5s ease-in-out;
+}
 
-        .slide {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center; /* Ensure text aligns properly */
-            padding: 30px;
-            width: 100%;
-        }
-           
-        /* Ensure all headings and text are fully centered */
-        h1, h2, p, ul {
-            text-align: center;
-            margin: 0 auto; /* Ensures consistent centering */
-            max-width: 80%; /* Keeps it from being too wide */
-        }
-    
-        /* Headings & Text */
-        h2 {
-            font-size: clamp(24px, 6vw, 36px);
-            font-weight: 700;
-            color: #003850; /* Primary branding color */
-        }
+/* Fix individual slide centering */
+.slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 30px;
+    width: 100vw; /* Ensure it takes full viewport width */
+    max-width: 900px; /* Prevents it from getting too wide */
+}
 
-        p {
-            font-size: clamp(16px, 1.2vw, 18px);
-            line-height: 1.5;
-            max-width: 80%;
-        }
+/* Ensure all text is fully centered */
+h1, h2, p, ul {
+    text-align: center;
+    margin: 0 auto; /* Ensures consistent centering */
+    max-width: 80%; /* Keeps text from stretching too wide */
+}
+
+/* Headings & Text */
+h2 {
+    font-size: clamp(24px, 6vw, 36px);
+    font-weight: 700;
+    color: #003850; /* Primary branding color */
+}
+
+/* Optional: Add a slight padding to keep balance */
+p {
+    padding: 10px 0;
+}
+
 
         ul {
             text-align: left;
